test/cases/compile_errors/union_init_with_non_type_as_first_param.zig
export fn u() void {
    _ = @unionInit(0, "a", 0);
}

// error
//
// :2:20: error: expected type 'type', found 'comptime_int'
